fix issue where hamburger overlaps name

--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -20,12 +20,18 @@ div#landingPage {
 }
 div#mainHeadingHorizontal {
     background-color: rgba(200, 200, 200, 0.7);
-    width: 30%;
+    width: auto;
+    max-width: calc(100% - 9.9vh - 1.5%);
     height: 9.9%;
     position: absolute;
     top: 2%;
-    right: 0.5%;
+    right: calc(9.9vh + 1%);
     border-radius: 10px;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    white-space: nowrap;
 }
 div#mainHeadingVertical {
     background-color: rgba(200, 200, 200, 0.7);
@@ -36,20 +42,18 @@ div#mainHeadingVertical {
     left: 50%;
     border-radius: 15px;
     text-align: center;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
 }
 h1#name{
-  position: absolute;
-  left: 4%;
-  top: calc(50% - 1.85vh);
+  position: static;
   font-size: 3.7vh;
-  margin-top: 0%;
-  margin-bottom: 0%;
+  margin: 0;
 }
 i#hamburger{
-  position: sticky;
-  background-color: rgb(255, 255, 255, 0.6);
-  left: calc(99.5% - 9.9vh);
+  position: fixed;
   top: 2vh;
+  right: 0.5%;
+  background-color: rgb(255, 255, 255, 0.6);
   padding: 0;
   width: 9.9vh;
   height: 9.9vh;
@@ -58,6 +62,8 @@ i#hamburger{
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 50;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.5);
 }
 
 div#mainInfo{
@@ -339,20 +345,19 @@ div#end.container::after {
   /* Reposition name heading to center of screen */
   div#mainHeadingHorizontal {
     width: 80%;
+    max-width: 80%;
     height: auto;
     top: 40%;
     left: 10%;
     right: auto;
     border-radius: 15px;
     text-align: center;
-    background-color: rgba(200, 200, 200, 0.7);
+    padding: 10px 20px;
+    justify-content: center;
   }
 
   h1#name {
-    position: static;
     font-size: 5vw;
-    margin: 0;
-    padding: 10px 0;
   }
 
   /* All containers full width, stacked.
